deployment_cron_rsync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-cron-rsync
  namespace: mirror-sg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-cron-rsync
  template:
    metadata:
      labels:
        app: mirror-cron-rsync
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: mirror-cron-rsync
        image: registry.kst.asia/library/mirror-rsync:2026.10.07
        imagePullPolicy: Always
        volumeMounts:
        - name: mirror-logs
          mountPath: /mnt/mirror
        resources:
          requests:
            cpu: "1"
            memory: "50Mi"
          limits:
            cpu: "6"
            memory: "2000Mi"
      volumes:
      - name: mirror-logs
        hostPath:
          path: /mnt/mirror/data
          type: Directory
