deployment_serve_caddy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-serve-caddy
  namespace: mirror
  labels:
    app: mirror-serve-caddy
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mirror-serve-caddy
  template:
    metadata:
      labels:
        app: mirror-serve-caddy
    spec:
      containers:
      - name: mirror-serve-caddy
        image: caddy
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "4"
              memory: "1000Mi"
        volumeMounts:
        - name: nfs-mirror
          mountPath: /usr/share/nginx/html
      imagePullSecrets:
      - name: dockersecret
      volumes:
      - name: nfs-mirror
        nfs:
          server: 192.168.10.10
          path: /docker_mounts/mirror
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: mirror-serve-caddy
  name: mirror-serve-caddy
  namespace: mirror
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mirror-serve-caddy
