deployment_serve_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-serve-nginx
  namespace: mirror-sg
  labels:
    app: mirror-serve-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-serve-nginx
  template:
    metadata:
      labels:
        app: mirror-serve-nginx
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - mirror-serve-nginx
              topologyKey: kubernetes.io/hostname
      containers:
      - name: mirror-serve-nginx
        image: narapon/mirror
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "6"
            memory: "1000Mi"
        volumeMounts:
        - name: mirror-data
          mountPath: /usr/share/nginx/html
      imagePullSecrets:
      - name: dockersecret
      volumes:
      - name: mirror-data
        hostPath:
          path: /mnt/k8s-data/mirror
          type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: mirror-serve-nginx
  name: mirror-serve-nginx
  namespace: mirror-sg
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mirror-serve-nginx
