deployment_serve_rsync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-serve-rsync
  namespace: mirror
  labels:
    app: mirror-serve-rsync
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mirror-serve-rsync
  template:
    metadata:
      labels:
        app: mirror-serve-rsync
    spec:
      containers:
      - name: mirror-serve-rsync
        image: toendeavour/rsyncd-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 873
          name: rsync
        resources:
          requests:
            cpu: "200m"
            memory: "50Mi"
          limits:
            cpu: "4"
            memory: "1000Mi"
        volumeMounts:
        - name: mirror-serve-rsync-motd
          mountPath: /tmp
        - name: mirror-serve-rsync-config
          mountPath: /config
        - name: nfs-mirror-serve-rsync-data
          mountPath: /data/share
      imagePullSecrets:
      - name: dockersecret
      volumes:
      - name: mirror-serve-rsync-motd
        configMap:
          name: mirror-serve-rsync-motd
      - name: mirror-serve-rsync-config
        configMap:
          name: mirror-serve-rsync-config
      - name: nfs-mirror-serve-rsync-data
        nfs:
          server: 192.168.10.10
          path: /docker_mounts/mirror
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: mirror-serve-rsync
  name: mirror-serve-rsync
  namespace: mirror
spec:
  ports:
  - port: 873
    targetPort: 873
    protocol: TCP
    name: rsync-tcp
  selector:
    app: mirror-serve-rsync
