virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mirror-serve-nginx
  namespace: mirror-sg
spec:
  hosts:
  - "mirror.sg"
  # - "*mirror.sg"
  gateways:
  - mirror-sg/mirror-sg-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mirror-serve-nginx
        port:
          number: 80
      weight: 100
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: mirror-serve-rsync
#   namespace: mirror-sg
# spec:
#   hosts:
#   - "mirror.sg"
#   gateways:
#   - mirror-sg-gateway-rsync
#   tcp:
#   - match:
#     - port: 873
#     route:
#     - destination:
#         host: mirror-serve-rsync
#         port:
#           number: 873
#       weight: 100
